<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/repetitionButton"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="48dp"
        android:background="#FF9800"
        android:baselineAligned="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRepetition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewRepetition"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewRepetition"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:text="@string/repTextView"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <TextView
        android:id="@+id/chooseTextView"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:text="@string/choose"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="92dp"
        android:layout_height="52dp"
        android:background="#ADBD96"
        android:ems="10"
        android:hint="@string/n"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chooseTextView"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="95dp"
        android:layout_height="57dp"
        android:background="#ADBD96"
        android:ems="10"
        android:hint="@string/r"
        android:textColor="#000000"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/chooseTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="303dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewRepetition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57">

        <RadioButton
            android:id="@+id/permRadioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/permRadioButton"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/combRadioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#000000"
            android:text="@string/combRadioButton" />
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/submitButton"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTextView"
        app:layout_constraintVertical_bias="0.632" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:background="#ADBD96"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/submitButton"
        app:layout_constraintTop_toTopOf="@+id/submitButton" />

</androidx.constraintlayout.widget.ConstraintLayout>